fix(components): mat-sidenav overflow in Firefox
- mat-sidenav always shows an x-overflow at the
bottom of a mat-sidenav in Firefox
- This commit wraps mat-sidenav content in a div with
overflow: hidden to prevent the x-overflow from showing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -28,3 +28,7 @@ mat-nav-list {
     rgba(0, 0, 0, 0) 3px
   );
 }
+
+.nav-list {
+  overflow: hidden;
+}
